--- a/org.eclipse.egit.repository/siteTemplate/index.html
+++ b/org.eclipse.egit.repository/siteTemplate/index.html
@@ -1,21 +1,22 @@
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+  "http://www.w3.org/TR/html4/loose.dtd">
 <head>
 <title>${update.site.name} - ${update.site.description} ${update.site.version}</title>
 <link rel="stylesheet" type="text/css" href="web/site.css">
 </head>
-<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
+<body style="margin: 0; padding: 0">
 <center>
 <table cellspacing="0" cellpadding="0" class="table">
 	<tr>
 		<td colspan="3" class="td_header">&nbsp;</td>
 	</tr>
 	<tr>
-		<td>&#160;&#160;&#160;&#160;&#160;&#160;</td>
-		<td>&#160;&#160;&#160;&#160;&#160;&#160;</td>
-		<td>&#160;&#160;&#160;&#160;&#160;&#160;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	</tr>
 	<tr>
-		<td>&#160;&#160;&#160;&#160;&#160;&#160;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 		<td>
 		<h2 class="title">${update.site.name} - ${update.site.description}</h2>
 		<table width="100%">
@@ -25,22 +26,22 @@
 
 			<tr class="light-row" style="height: 30px">
 				<td class="bodyText">
-				<p class="bodyText">This is the <b${update.site.description}</b>
-				${update.site.name}.
+				<p class="bodyText">This is the <b>${update.site.name}</b>.
+				${update.site.description}.
 								<blockquote style="border: 1px dashed #1778be; padding: 2px">
 									<ol>
 										<li>To <a class="link"
 											href="https://www.eclipse.org/egit/download/">install</a>
 											from this site, start up Eclipse ${target.eclipse.version}, then do:
 											<ul>
-												<code><strong>Help > Install New Software... ></strong></code>
+												<li><code><strong>Help > Install New Software... ></strong></code></li>
 											</ul>
 										</li>
 										<li>Copy this site's URL into Eclipse, and hit Enter.</li>
 										<li>When the site loads, select the features to install,
 											or click the <code><strong>Select All</strong></code> button.</li>
 										<li>To properly resolve all dependencies, check
-										<ul><code><strong>[x] Contact all update sites during install to find required software</strong></code></ul>
+										<ul><li><code><strong>[x] Contact all update sites during install to find required software</strong></code></li></ul>
 
 										<li>Click <code><strong>Next</strong></code>, agree to the license
 											terms, and install.</li>
@@ -50,10 +51,11 @@
 						</tr>
 		</table>
 		</td>
-		<td>&#160;&#160;&#160;&#160;&#160;&#160;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	</tr>
-	<tr class="bodyText">
-		${site.contents}
-	</tr>
+</table>
+<div class="bodyText">
+	${site.contents}
+</div>
 </center>
 </html>
