--- a/org.eclipse.egit.repository/siteTemplate/index.html
+++ b/org.eclipse.egit.repository/siteTemplate/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
   "http://www.w3.org/TR/html4/loose.dtd">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>${update.site.name} - ${update.site.description} ${update.site.version}</title>
 <link rel="stylesheet" type="text/css" href="web/site.css">
 </head>
