First commited as after_78514_rev1

--- a/org.eclipse.egit.doc/help/EGit/Contributor_Guide/Builds.html
+++ b/org.eclipse.egit.doc/help/EGit/Contributor_Guide/Builds.html
@@ -57,9 +57,7 @@
 		<h2 id="JGit_2">JGit</h2>
 		<ul>
 			<li>JGit can be built using Maven 2 or 3.</li>
-			<li>use Java 7 to run the JGit Maven build (required since bundle 
-				<i>org.eclipse.jgit.java7</i> needs Java 7)
-			</li>
+			<li>use Java 7 to run the JGit Maven build</li>
 			<li>JGit packaging projects (Eclipse feature and update site) are built using Maven 3 and Tycho.</li>
 		</ul>
 		<h2 id="EGit_2">EGit</h2>
